--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^4.1.0",
     "ethers": "^6.13.4",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
